Started implementing Docker to work with JavaFX